--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuepress-plugin-reading-progress",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "main": "index.js",
   "description": "A reading progress bar plugin for VuePress",
   "author": "tolking <qw13131wang@gmail.com>",
@@ -20,7 +20,7 @@
     "progress"
   ],
   "devDependencies": {
-    "@vuepress/shared-utils": "^1.0.0-alpha.39",
-    "vuepress": "^1.0.0-alpha.39"
+    "@vuepress/shared-utils": "^1.0.0",
+    "vuepress": "^1.0.0"
   }
 }
