--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuepress-plugin-reading-progress",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "main": "index.js",
   "description": "A reading progress bar plugin for VuePress",
   "author": "tolking <qw13131wang@gmail.com>",
@@ -10,7 +10,7 @@
     "url": "https://github.com/tolking/vuepress-plugin-reading-progress/issues"
   },
   "homepage": "https://github.com/tolking/vuepress-plugin-reading-progress",
-  "doc": "https://ououe.com/lib/vuepress-plugin-reading-progress.html",
+  "doc": "https://github.com/tolking/vuepress-plugin-reading-progress",
   "keywords": [
     "vue",
     "vuepress",
